--- a/ApplicationWebpage.html
+++ b/ApplicationWebpage.html
@@ -45,14 +45,14 @@
         </article>
     </aside>
 
-    <aside class="top-sidebar">
+    <aside class="middle-sidebar">
         <article>
             <h2>Top Sidebar</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
         </article>
     </aside>
 
-    <aside class="top-sidebar">
+    <aside class="bottom-sidebar">
         <article>
             <h2>Top Sidebar</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
