Changed background color

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
     <aside class="middle-sidebar">
         <article>
-            <h2>Top Sidebar</h2>
+            <h2>Middle Sidebar</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
         </article>
     </aside>
 
     <aside class="bottom-sidebar">
         <article>
-            <h2>Top Sidebar</h2>
+            <h2>Bottom Sidebar</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
         </article>
     </aside>
