Styling changes to sidebar

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                    
                 </ion-content>
             </article>
+            <article class="secondArt">
+                <header>
+                    <h2><a href="#" title="secondPost">Second Post</a></h2>
+                </header>
+                <footer>
+                    <p class="metadata">This article is written by Trevor</p>
+                </footer>
+
+                <ion-content>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                    
+                </ion-content>
+            </article>
         </div>
     </div>
 
@@ -59,7 +72,7 @@
     </aside>
 
     <footer class="mainFooter">
-        <p>Copyright &copy;<a href="#" title="somewebsite?">somewebsite?</a></p>
+        <p>Trevor Forsyth<a href="trevorcforsyth@gmail.com" title="email">trevorcforsyth@gmail.com</a></p>
     </footer>
     
 </body>
