Updates to color and content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="WebpageStyle.css" type="text/css">
 </head>
 <body class="body">
-    <header class="mainheader">
-
+    <header class="mainHeader">
         <nav><ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>    
@@ -31,7 +30,11 @@
 
                 <ion-content>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                     
                 </ion-content>
             </article>
             <article class="secondArt">
@@ -44,6 +47,10 @@
 
                 <ion-content>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                    
                 </ion-content>
             </article>
@@ -72,7 +79,7 @@
     </aside>
 
     <footer class="mainFooter">
-        <p>Trevor Forsyth<a href="trevorcforsyth@gmail.com" title="email">trevorcforsyth@gmail.com</a></p>
+        <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a>
     </footer>
     
 </body>
