Changed sidebars to images

--- a/index.html
+++ b/index.html
@@ -9,77 +9,80 @@
     <link rel="stylesheet" href="WebpageStyle.css" type="text/css">
 </head>
 <body class="body">
+
+
     <header class="mainHeader">
         <nav><ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>    
-            <li><a href="#">Portfolio</a></li>    
+            <li><a href="About">About</a></li>    
+            <li><a href="Experience">Experience</a></li>    
             <li><a href="#">Contact</a></li>            
         </ul></nav>
     </header>
 
     <div class="mainContent">
         <div class="content">
-            <article class="firstArt">
+            <article class="firstArt" name="About">
                 <header>
-                    <h2><a href="#" title="firstPost">First Post</a></h2>
+                    <h2><a href="#" title="firstPost">Why web development?</a></h2>
                 </header>
-                <footer>
-                    <p class="metadata">This article is written by Trevor</p>
-                </footer>
 
                 <ion-content>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                     
+                     <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius 
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                    </p>                     
                 </ion-content>
             </article>
-            <article class="secondArt">
+            <article class="secondArt" name="Experience">
                 <header>
-                    <h2><a href="#" title="secondPost">Second Post</a></h2>
+                    <h2><a href="#" title="secondPost">What I've been doing...</a></h2>
                 </header>
-                <footer>
-                    <p class="metadata">This article is written by Trevor</p>
-                </footer>
 
                 <ion-content>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>                    
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                    </p>                     
                 </ion-content>
             </article>
         </div>
     </div>
 
     <aside class="top-sidebar">
-        <article>
-            <h2>Top Sidebar</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-        </article>
+        <a href="https://github.com/tforse/tforse.github.io"><img src="GIT IMG.png" alt= "Github"></a>
     </aside>
 
     <aside class="middle-sidebar">
-        <article>
-            <h2>Middle Sidebar</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-        </article>
+        <a href="https://www.codewars.com/users/tforse"><img src="Codewars IMG.jpeg" alt="Codewars"></a>
     </aside>
 
     <aside class="bottom-sidebar">
-        <article>
-            <h2>Bottom Sidebar</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius</p>
-        </article>
+        <a href="https://www.freecodecamp.org/tforse"><img src="FCC IMG.jpeg" alt="FCC"></a>
     </aside>
 
     <footer class="mainFooter">
-        <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a>
+        <p><a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
     </footer>
     
 </body>
