Change image reference and background color

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
     </div>
 
     <aside class="top-sidebar">
-        <a href="https://github.com/tforse/tforse.github.io"><img src="GIT IMG.png" alt= "Github"></a>
+        <a href="https://github.com/tforse/tforse.github.io"><img src="https://github.com/tforse/tforse.github.io/blob/master/GIT.png" alt= "Github"></a>
     </aside>
 
     <aside class="middle-sidebar">
-        <a href="https://www.codewars.com/users/tforse"><img src="Codewars IMG.jpeg" alt="Codewars"></a>
+        <a href="https://www.codewars.com/users/tforse"><img src="https://github.com/tforse/tforse.github.io/blob/master/Codewars.png" alt="Codewars"></a>
     </aside>
 
     <aside class="bottom-sidebar">
-        <a href="https://www.freecodecamp.org/tforse"><img src="FCC IMG.jpeg" alt="FCC"></a>
+        <a href="https://www.freecodecamp.org/tforse"><img src="https://github.com/tforse/tforse.github.io/blob/master/FCC.png" alt="FCC"></a>
     </aside>
 
     <footer class="mainFooter">
