--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <header class="mainHeader">
         <nav><ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="About">About</a></li>    
-            <li><a href="Experience">Experience</a></li>    
-            <li><a href="#">Contact</a></li>            
+            <li><a href="#top">Home</a></li>
+            <li><a href="#About">About</a></li>    
+            <li><a href="#Experience">Experience</a></li>    
+            <li><a href="#contact">Contact</a></li>            
         </ul></nav>
     </header>
 
     <div class="mainContent">
         <div class="content">
-            <article class="firstArt" name="About">
+            <article class="firstArt" id="About">
                 <header>
                     <h2><a href="#" title="firstPost">Why web development?</a></h2>
                 </header>
@@ -44,7 +44,7 @@
                     </p>                     
                 </ion-content>
             </article>
-            <article class="secondArt" name="Experience">
+            <article class="secondArt" id="Experience">
                 <header>
                     <h2><a href="#" title="secondPost">What I've been doing...</a></h2>
                 </header>
@@ -81,7 +81,7 @@
         <a href="https://www.freecodecamp.org/tforse"><img src="https://github.com/tforse/tforse.github.io/blob/master/FCC.png?raw=true" alt="FCC"></a>
     </aside>
 
-    <footer class="mainFooter">
+    <footer class="mainFooter" id="contact">
         <p><a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
     </footer>
     
