--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Founders & Coders</title>
+    <title>Application - Trevor F</title>
     
     <link rel="stylesheet" href="WebpageStyle.css" type="text/css">
 </head>
@@ -82,7 +82,7 @@
     </aside>
 
     <footer class="mainFooter" id="contact">
-        <p><a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
+        <p>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
     </footer>
     
 </body>
