new aside - LinkedIn

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         <a href="https://www.freecodecamp.org/tforse"><img src="https://github.com/tforse/tforse.github.io/blob/master/FCC.png?raw=true" alt="FCC"></a>
     </aside>
 
+    <aside class="subbottom-sidebar">
+        <a href="www.linkedin.com/in/trevor-forsyth-a39a85a8"><img src="https://github.com/tforse/tforse.github.io/blob/master/LinkedIn.png?raw=true" alt="LinkedIn"></a>
+    </aside>
+
     <footer class="mainFooter" id="contact">
         <p>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
     </footer>
