don't forget footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </aside>
 
     <footer class="mainFooter" id="contact">
-        <p>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
+        <p>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth sucks!!!!!</a></p>
     </footer>
     
 </body>
