changed footer for email

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     </aside>
 
     <aside class="subbottom-sidebar">
-        <a href="www.linkedin.com/in/trevor-forsyth-a39a85a8"><img src="https://github.com/tforse/tforse.github.io/blob/master/LinkedIn.png?raw=true" alt="LinkedIn"></a>
+        <a href="https://www.linkedin.com/in/trevor-forsyth-a39a85a8"><img src="https://github.com/tforse/tforse.github.io/blob/master/LinkedIn.png?raw=true" alt="LinkedIn"></a>
     </aside>
 
     <footer class="mainFooter" id="contact">
-        <p>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></p>
+        <address>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></address>
     </footer>
     
 </body>
