--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </aside>
 
     <footer class="mainFooter" id="contact">
-        <address>Created by <a href="trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></address>
+        <address>Created by <a href="mailto:trevorcforsyth@gmail.com" title="email">Trevor Forsyth</a></address>
     </footer>
     
 </body>
