Mobile responsive and shading

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Application - Trevor F</title>
+    <title>Trevor Forsyth</title>
     
     <link rel="stylesheet" href="WebpageStyle.css" type="text/css">
 </head>
 <body class="body">
 
-
     <header class="mainHeader">
         <nav><ul>
             <li><a href="#top">Home</a></li>
-            <li><a href="#About">About</a></li>    
-            <li><a href="#Experience">Experience</a></li>    
-            <li><a href="#contact">Contact</a></li>            
+            <li><a href="#About">About</a></li>
+            <li><a href="#Experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul></nav>
     </header>
 
