img hover opacity and updated text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Trevor Forsyth</title>
+    <title>Trevor Forsyth - Application</title>
     
     <link rel="stylesheet" href="WebpageStyle.css" type="text/css">
 </head>
@@ -28,18 +28,10 @@
 
                 <ion-content>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius 
+                        I began learning about web development to expand my skillset at work — probably one of the more common reasons to begin coding. I was studying and reporting on cybercrime, but had very little understanding of web technology and other foundational subjects. My ignorance was my motivation, and I devoted my spare time to learning about everything from the Open Systems Interconnection (OSI) model to basic JavaScript and VBA. 
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        Although everything I learned was interesting, what I connected with instinctively was the practical, problem-solving inherent in coding. It was what I missed as a cyber security consultant. Coding forced me to use a part of my brain that just wasn’t being exercised at work. And ultimately, discovering it led me to Founders and Coders. I can’t say what I would do with the F&C experience, but I know that this skillset is one I will pursue regardless.
                     </p>                     
                 </ion-content>
             </article>
@@ -50,19 +42,17 @@
 
                 <ion-content>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
+                        I am originally from the United States, but I have lived in London for the past six years and have dual citizenship. I spent a year getting an MSc in Security Studies — a political science degree — at UCL, and only found out later how impractical a graduate poli-sci degree can be. Afterwards, I spent six months living in Ecuador and Colombia, easily two of the most beautiful countries I’ve seen, before returning to the UK.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
-                    </p>                     
+                        I began looking for work, applying for internships at think tanks, and even for graduate programs with major consultancies and financial firms (narrow escape). Somehow, I fell into a cyber threat intelligence research internship with a risk consultancy based in London Bridge. I began learning about cyber security, how to research and write professional-quality reports, and I began to understand the importance of developing a technical skillset.
+                    </p>
+                    <p>
+                        I’ve alread described how I began learning to code. Almost two months ago now, I left my work in London, moved to Valencia, Spain, and began studying part-time. I spend my mornings contracting for a cyber security company based in London, and my afternoons working through algorithmic challenges or puzzling out the inner workings of CSS styling (much less intuitive).
+                    </p>
+                    <p>
+                        Regardless of the outcome of this application, F&C has inspired me to pursue something that I truly enjoy. So, thank you.
+                    </p>                   
                 </ion-content>
             </article>
         </div>
