--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <li><a href="#top">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#Experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
         </ul></nav>
     </header>
 
@@ -48,7 +47,7 @@
                         I began looking for work, applying for internships at think tanks, and even for graduate programs with major consultancies and financial firms (narrow escape). Somehow, I fell into a cyber threat intelligence research internship with a risk consultancy based in London Bridge. I began learning about cyber security, how to research and write professional-quality reports, and I began to understand the importance of developing a technical skillset.
                     </p>
                     <p>
-                        I’ve alread described how I began learning to code. Almost two months ago now, I left my work in London, moved to Valencia, Spain, and began studying part-time. I spend my mornings contracting for a cyber security company based in London, and my afternoons working through algorithmic challenges or puzzling out the inner workings of CSS styling (much less intuitive).
+                        I’ve already described how I began learning to code. Almost two months ago now, I left my work in London, moved to Valencia, Spain, and began studying part-time. I spend my mornings contracting for a cyber security company based in London, and my afternoons working through algorithmic challenges or puzzling out the inner workings of CSS styling (much less intuitive).
                     </p>
                     <p>
                         Regardless of the outcome of this application, F&C has inspired me to pursue something that I truly enjoy. So, thank you.
